<resources>
    <string name="app_name">feasta_temp</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_favourites">Favourite</string>
    <string name="title_offers">Offer</string>
    <string name="title_account">Account</string>
    <string name="slogan_text">Bored with searching good mess, join us to have access to 100+ mess near you.</string>
    <string name="title_activity_temp">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="btn_Sign_In">Sign In</string>
    <string name="btn_Sign_Up">Sign Up</string>
    <string name="sort">Sort By</string>
    <string name="mess">Mess Name</string>
    <string name="rating">4.0</string>
    <string name="type">Veg/Non-Veg</string>
    <string name="timing">Timing :-</string>
</resources>
