<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/loginLogo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/sloganText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginLogo"
            android:gravity="center"
            android:text="@string/slogan_text"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSignUp"
            android:text="@string/btn_Sign_Up"
            android:textColor="@android:color/white"
            android:shadowColor="@color/btnShadow"
            android:background="@drawable/custom_button_signup"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            />

        <Button
            android:id="@+id/btnSignIn"
            android:text="@string/btn_Sign_In"
            android:textColor="@android:color/white"
            android:shadowColor="@color/btnShadow"
            android:background="@drawable/custom_button_signin"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp" />
    </LinearLayout>

</RelativeLayout>