<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/mess_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/image_shape"
                    android:contentDescription="@string/mess"
                    android:scaleType="centerCrop"
                    android:src="@drawable/mess_temp"/>

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="270dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp">

                <TextView
                    android:id="@+id/mess_name"
                    android:textColor="#ffffff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mess"
                    android:paddingLeft="10dp"
                    android:background="@drawable/name_background"/>

                <TextView
                    android:id="@+id/type"
                    android:layout_width="match_parent"
                    android:textColor="#ffffff"
                    android:layout_height="wrap_content"
                    android:text="@string/type" />

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:text="@string/rating" />

                <ImageView
                    android:id="@+id/rating_image"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:src="@drawable/star"
                    android:contentDescription="@string/rating" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>